# clav

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
config/: config.example.yaml  config.pilot.example.yaml
deploy/: backup.sh  clav-backup.service  clav-backup.timer  clav-core.service  clav-web.service  install.sh
docs/: 00-overview.md  01-architecture.md  02-modules.md  03-database.md  04-integrations.md  05-class-design.md  06-safety-and-risk.md  07-trade-review.md  08-project-structure.md  09-deployment.md  10-observability.md  11-testing.md  12-roadmap.md  13-flows.md  14-future-expansion.md  15-go-live-checklist.md
docs/epics/: epic-01-foundation.md  epic-02-risk-and-portfolio.md  epic-03-gemini-and-control.md  epic-04-dashboard-and-observability.md  epic-05-trade-review-and-calibration.md  epic-06-live-trading-and-soak.md  epic-07-autonomous-discovery.md
migrations/: env.py  script.py.mako
migrations/versions/: 0934d97cc44f_epic_3_story_3_10_prompt_version_table.py  104e5843d494_epic_3_story_3_12_analysis_result_.py  14ceeb145775_epic_5_story_5_4_trade_review_backoff_.py  459c6bc4560b_epic_5_story_5_1_trade_review_table.py  91ead6156151_epic_4_story_4_1_health_event_table.py  a84af8be7152_epic_1_baseline_schema.py  aff2e8f04f7e_epic_2_story_2_1_risk_evaluation_and_.py  b1d7c0a5e2f4_epic_7_discovery_asset_and_analysis_request.py  dafa1cbb0d49_epic_3_story_3_7_trade_proposal_.py  e0139e9f3aca_epic_3_story_3_3_news_item_and_social_.py  e06459cac8b3_epic_4_story_4_4_config_snapshot_table.py
src/clav/: app.py  cli.py  clock.py  config.py
tests/integration/: conftest.py  test_alpaca_broker.py  test_alpaca_data.py  test_e2e_soak.py  test_epic2_risk_invariants.py  test_epic3_chaos_invariants.py  test_epic3_e2e_provenance.py  test_epic4_dashboard_smoke.py  test_epic5_chaos_invariants.py  test_epic6_live_safety_invariants.py  test_migrations.py  test_paper_broker.py  test_safety_invariants.py  test_scan_cycle.py  test_scan_cycle_config_snapshot.py  test_scan_cycle_discovery.py  test_scan_cycle_health.py  test_scan_cycle_journal.py  test_scan_cycle_llm.py  test_scan_cycle_runtime_config.py
tests/unit/: test_alert_channels.py  test_alerting.py  test_analyst_gateway.py  test_app_composition.py  test_architecture.py  test_asset_universe.py  test_broker_factory.py  test_calibration.py  test_charts.py  test_cli.py  test_clock.py  test_config.py  test_config_snapshot_repository.py  test_db.py  test_decision.py  test_decision_journal.py  test_decision_llm.py  test_discovery.py  test_domain_models.py  test_dryrun_broker.py  test_env_setup.py  test_execution.py  test_gemini_analyst.py  test_gemini_chaos.py  test_gemini_rest_client.py  test_gemini_review.py  test_git_sha.py  test_logging.py  (+39 more)
(+107 files in other folders)
