[project]
name = "clav"
version = "0.1.0"
description = "CLAV — Continuous LLM-Assisted Valuation: autonomous swing-trading system"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.3,<3",
    "sqlalchemy>=2.0,<3",
    "alembic>=1.13,<2",
    "alpaca-py>=0.28,<1",
    "structlog>=24.1,<25",
    "tenacity>=8.3,<9",
    "apscheduler>=3.10,<4",
    "httpx>=0.27,<1",
    "numpy>=1.26,<2",
    "pyyaml>=6.0,<7",
    "click>=8.1,<9",
]

[dependency-groups]
dev = [
    "pytest>=8.2,<9",
    "pytest-cov>=5.0,<6",
    "pytest-asyncio>=0.23,<1",
    "ruff>=0.5,<1",
    "mypy>=1.10,<2",
    "import-linter>=2.0,<3",
    "hypothesis>=6.100,<7",
    "respx>=0.21,<1",
    "freezegun>=1.5,<2",
    "types-pyyaml>=6.0,<7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/clav"]

[project.scripts]
clav = "clav.app:main"
clav-ctl = "clav.cli:main"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["clav"]

[tool.ruff.lint.per-file-ignores]
# Alembic autogenerates these; don't hand-reformat vendor-style output.
"migrations/versions/*.py" = ["E501", "I001"]

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = "clav.domain.*"
strict = true

[[tool.mypy.overrides]]
module = "clav.interfaces.*"
strict = true

[[tool.mypy.overrides]]
module = "alpaca.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
filterwarnings = [
    "error::DeprecationWarning:clav.*",
]

[tool.coverage.run]
source = ["src/clav"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]

[tool.importlinter]
root_package = "clav"

[[tool.importlinter.contracts]]
name = "Domain and interfaces must not depend on integrations"
type = "forbidden"
source_modules = ["clav.domain", "clav.interfaces"]
forbidden_modules = ["clav.integrations"]

[[tool.importlinter.contracts]]
name = "Domain must not depend on services, data, or web"
type = "forbidden"
source_modules = ["clav.domain"]
forbidden_modules = ["clav.services", "clav.data", "clav.web"]

[[tool.importlinter.contracts]]
name = "Layers are independent of each other where expected"
type = "layers"
layers = [
    "clav.services",
    "clav.integrations",
    "clav.interfaces",
    "clav.domain",
    "clav.common",
]
